tests/neg/i19402.check
-- Error: tests/neg/i19402.scala:9:12 ----------------------------------------------------------------------------------
9 |  given bar(foo: Foo): Bar = Bar(foo) // error
  |            ^^^
  |            `using` expected
